--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,16 @@
     ],
     "require": {
         "php": "^8.2",
-        "illuminate/support": "^11",
-        "illuminate/console": "^11",
-        "illuminate/process": "^11",
+        "illuminate/support": "^10|^11",
+        "illuminate/console": "^10|^11",
+        "illuminate/process": "^10|^11",
         "ext-pcntl": "*",
         "joetannenbaum/chewie": "^0.1.7"
     },
     "require-dev": {
-        "illuminate/database": "^11"
+        "illuminate/database": "^10|^11",
+        "phpunit/phpunit": "^10|^11",
+        "orchestra/testbench": "^8|^9"
     },
     "autoload": {
         "psr-4": {
