--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -6,9 +6,14 @@ jobs:
   lint:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
