--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 /.github            export-ignore
 /phpunit.xml.dist   export-ignore
 /tests              export-ignore
+/art                export-ignore
 /docs               export-ignore
 /test               export-ignore
 /storage            export-ignore
