--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "require-dev": {
         "illuminate/database": "^10|^11",
         "phpunit/phpunit": "^10.5|^11",
-        "orchestra/testbench": "^8|^9"
+        "orchestra/testbench": "^8|^9",
+        "laravel/serializable-closure": "^1.3"
     },
     "autoload": {
         "psr-4": {
@@ -56,7 +57,7 @@
             "@php vendor/bin/testbench serve --ansi"
         ],
         "dev": [
-            "@php vendor/bin/testbench solo"
+            "@php vendor/bin/testbench solo:about"
         ]
     }
 }
