--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
         dependency-version: [ prefer-lowest, prefer-stable ]
         include:
           - laravel: 10.*
-            testbench: 8.*
+            testbench: ^8.8
           - laravel: 11.*
             testbench: 9.*
 
