--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ jobs:
           - laravel: 10.*
             testbench: ^8.8
           - laravel: 11.*
-            testbench: 9.*
+            testbench: ^9.1
 
 
     name: P${{ matrix.php }} / L${{ matrix.laravel }} / ${{ matrix.dependency-version }}
