--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,7 @@
             "@php vendor/bin/testbench serve --ansi"
         ],
         "dev": [
-            "@php vendor/bin/testbench solo:about"
+            "@php vendor/bin/testbench solo"
         ]
     }
 }
