Extended color support, dump server

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "illuminate/console": "^10|^11",
         "illuminate/process": "^10|^11",
         "ext-pcntl": "*",
+        "ext-posix": "*",
         "laravel/prompts": "^0.1.21|^0.2|^0.3",
         "joetannenbaum/chewie": "^0.1"
     },
