--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,4 @@
 /test               export-ignore
 /storage            export-ignore
 /bootstrap          export-ignore
+/src/Console/Commands/Test.php export-ignore
