--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "aaronfrancis/solo",
+    "name": "soloterm/solo",
     "description": "A Laravel package to run multiple commands at once, to aid in local development.",
     "type": "library",
     "license": "MIT",
@@ -27,21 +27,21 @@
     },
     "autoload": {
         "psr-4": {
-            "AaronFrancis\\Solo\\": "src/"
+            "SoloTerm\\Solo\\": "src/"
         }
     },
     "autoload-dev": {
         "files": [
         ],
         "psr-4": {
-            "AaronFrancis\\Solo\\Tests\\": "tests/",
+            "SoloTerm\\Solo\\Tests\\": "tests/",
             "App\\": "workbench/app/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "AaronFrancis\\Solo\\Providers\\SoloServiceProvider"
+                "SoloTerm\\Solo\\Providers\\SoloServiceProvider"
             ]
         }
     },
