--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,11 +15,8 @@ jobs:
       fail-fast: false
       matrix:
         php: [ 8.2, 8.3 ]
-        laravel: [ 10.*, 11.* ]
+        laravel: [ 10.*, 11.*, 12.* ]
         dependency-version: [ prefer-lowest, prefer-stable ]
-        include:
-          - laravel: 10.*
-          - laravel: 11.*
 
     name: P${{ matrix.php }} / L${{ matrix.laravel }} / ${{ matrix.dependency-version }}
 
